make the activeCompany optional
#34